--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -193,3 +193,130 @@
   width: 45%;
   margin-left: 25%;
 }
+
+.Popular {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.Popular_h {
+  margin-bottom: 0%;
+  text-align: center;
+}
+.Popular_p {
+  width: 90%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.Popular_Pic_All {
+  display: flex;
+  flex-direction: row;
+  width: 80vh;
+}
+.Popular_button_l {
+  width: 20px;
+  height: 40px;
+  margin-top: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.Popular_button_r {
+  width: 20px;
+  height: 40px;
+  margin-top: 100px;
+  margin-left: 40px;
+  margin-right: 10px;
+}
+.Popular_Pic {
+  height: 200px;
+  width: 200px;
+  margin-left: 20px;
+}
+
+.Gifts {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin-left: 50px;
+}
+.Gifts_h {
+  margin-bottom: 0%;
+  text-align: center;
+}
+.Gifts_p {
+  width: 90%;
+  text-align: center;
+}
+.Gifts_Pic_All {
+  display: flex;
+  flex-direction: row;
+  width: 80vh;
+  height: 350px;
+}
+
+.Gifts_Pic {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #e5e5e5;
+  border-radius: 10px;
+  height: 250px;
+  width: 300px;
+  margin-left: 7%;
+}
+.Gifts_Pic_1 {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #e5e5e5;
+  border-radius: 10px;
+  height: 250px;
+  width: 300px;
+  margin-left: 150px;
+}
+
+.Gifts_Pic_text {
+  text-align: center;
+}
+
+.Footer {
+  width: 80vh;
+}
+
+.Footer_2 {
+  text-align: left;
+  background-color: #ffffff;
+  width: 100vw;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Footer_3 {
+  width: 30%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-left: 5%;
+}
+.Footer3_2 {
+  width: 90%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+}
+.Footer3_2_1 {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+}
+
+.Footer3_2_2 {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+}
