--- a/my-app/src/Home.css
+++ b/my-app/src/Home.css
@@ -1,3 +1,11 @@
+.Header {
+  background-color: #ffffff;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 .Header_2 {
   text-align: center;
   background-color: #ffffff;
@@ -89,7 +97,7 @@
 }
 
 .Main_1_2 {
-  margin-left: 10%;
+  margin-left: 13%;
   width: 40%;
   display: flex;
   justify-content: flex-end;
@@ -111,7 +119,7 @@
   margin-top: 50px;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 94%;
   margin-left: 50px;
 }
 .ElitePorTea_h {
@@ -119,7 +127,7 @@
   text-align: center;
 }
 .ElitePorTea_p {
-  width: 90%;
+  width: 100%;
   text-align: center;
 }
 .Elite_Portioned_Pic_All {
@@ -135,17 +143,17 @@
   flex-direction: column;
   border: 2px solid #e5e5e5;
   border-radius: 10px;
-  height: 90%;
-  width: 45%;
-  margin-left: 40px;
+  height: 85%;
+  width: 41%;
+  margin-left: 50px;
 }
 .Elite_Portioned_Pic_1 {
   display: flex;
   flex-direction: column;
   border: 2px solid #e5e5e5;
   border-radius: 10px;
-  height: 90%;
-  width: 45%;
+  height: 85%;
+  width: 41%;
   margin-left: 10px;
 }
 
@@ -157,7 +165,7 @@
   margin-top: 50px;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 96%;
   margin-left: 50px;
 }
 .Flash_Tips_h {
@@ -165,7 +173,7 @@
   text-align: center;
 }
 .Flash_Tips_p {
-  width: 90%;
+  width: 96%;
   text-align: center;
 }
 .Flash_Tips_Pic_All {
